--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<html><h1>Yes.</h1></html>
+<html>
+  <head>
+  </head>
+  <body>
+    <h1>Yes.</h1>
+    <img data-src="//de9xxjhuq2c2j.cloudfront.net/apps/live-20180516-1/images/emoji/emoji-android/1f525.png">
+  </body>
+</html>
