--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
   <head>
   </head>
   <body>
-    <h1>Yes.</h1>
-    <img src="/check.jpg"/>
+    <div>
+      <h1>Yes.<img src="/check.jpg"/></h1>
+    </div>
   </body>
 </html>
