added inline style

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   </head>
   <body>
     <div>
-      <h1>Yes.<img src="/check.jpg"/></h1>
+      <h1 style="color:crimson; text-align:center; margin-top: 200pt">Yes.</h1>
     </div>
   </body>
 </html>
